--- a/HelloFuckingSpring/.settings/org.eclipse.wst.common.component
+++ b/HelloFuckingSpring/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
     <wb-module deploy-name="HelloFuckingSpring">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="HelloFuckingSpring"/>
         <property name="java-output-path" value="/HelloFuckingSpring/build/classes"/>
+        <property name="context-root" value="tarefas"/>
     </wb-module>
 </project-modules>
